--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postgreStart": "nodemon ./serverPostgres/index.js",
     "prod": "node ./serverPostgres/index.js",
     "mongoStart": "nodemon ./serverMongo/index.js",
-    "build": "webpack -d --watch",
+    "build": "webpack -p",
     "seed": "node ./db/seed.js"
   },
   "repository": {
